small javadoc updates